force-app/main/default/objects/Training_History__c/Training_History__c.object-meta.xml
<CustomObject>
    <label>Training History</label>
    <nameField>
        <displayFormat>TH-{00000}</displayFormat>
        <label>Training History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>