force-app/main/default/objects/Training_History__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the class</description>
    <label>Class Name</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Training Histories</relationshipLabel>
    <relationshipName>Training_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>