force-app/main/default/objects/Training_History__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <description>it tracks the course Type belongs to a class</description>
    <formula>Text(Class_Name__r.Course__r.Course_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Type</label>
    <type>Text</type>
</CustomField>