force-app/main/default/objects/Training_History__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Provides information about when training completes</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>