force-app/main/default/objects/Training_History__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>Status of the training.</description>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>