force-app/main/default/objects/Training_History__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>tracks information about when registration happened for training.</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>