force-app/main/default/objects/Training_History__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <description>information about  Registration status of the training.</description>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>