force-app/main/default/objects/Training_History__c/fields/Sumtotal_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Sumtotal_Import_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>provide the information about when the record is updated to the sales force from sum total.</description>
    <label>Sumtotal Import Date</label>
    <type>DateTime</type>
</CustomField>