force-app/main/default/objects/Training_History__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <description>refers the instructor name of the class</description>
    <formula>Class_Name__r.Instructor__r.FirstName &amp;&quot;,&quot;&amp; Class_Name__r.Instructor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trainer</label>
    <type>Text</type>
</CustomField>