force-app/main/default/objects/Training_History__c/fields/Training_History_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_History_Code__c</fullName>
    <description>format of cod is UserName»CourseCode»ClassCode</description>
    <externalId>true</externalId>
    <label>Training History Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>