force-app/main/default/objects/Training_History__c/recordTypes/PSA_Training_History.recordType-meta.xml
<RecordType>
    <fullName>PSA_Training_History</fullName>
    <active>true</active>
    <description>PSA training history</description>
    <label>PSA Training History</label>
</RecordType>