force-app/main/default/objects/Training_History__c/validationRules/PSA_Completion_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PSA_Completion_Date_Validation</fullName>
    <active>true</active>
    <description>Completion date should always be after registration date.</description>
    <errorConditionFormula>Registration_Date__c &gt; Completion_Date__c</errorConditionFormula>
    <errorDisplayField>Completion_Date__c</errorDisplayField>
    <errorMessage>Completion date must be on or after Registration date.</errorMessage>
</ValidationRule>