force-app/main/default/objects/Training_History__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Trainer__c</columns>
    <columns>Class_Type__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Grade__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Training_History_Code__c</columns>
    <columns>Sumtotal_Import_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>